# easyrice

./: CMakeLists.txt  MANIFEST.in  Makefile  README.md  cipher.py  cli.txt  config  easyrice.desktop  exampleConfig  plan.md  setup.py  todo  todo.md
easyrice/: cli.py  config  easyrice.desktop  main.py
easyrice/commands/: mod_new.py  mod_pkg_install.py  mod_req.py  mod_run.py  mod_transfer.py  mod_upload.py  mod_utils.py
riceman/: config  launch.sh  main.py  riceman.desktop  ricemandesktop  write_default_config.py
share/applications/: multirice.desktop
share/xsessions/: multirice.desktop
src/: main.cpp
